align correction
correction de l'alignement de la page webcvabout et webcvwork

--- a/webcvabout.css
+++ b/webcvabout.css
@@ -237,6 +237,10 @@ span:hover{
     a {
         margin-bottom: 15px;
     }
+
+    nav {
+        margin-left: 2px;
+    }
 }
 
 
